--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.1",
-    "jest": "^30.2.0",
-    "ts-jest": "^30.2.0",
-    "rimraf": "^6.1.0"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
+    "@types/jest": "^29.5.11",
+    "rimraf": "^5.0.5"
   }
 }
