--- a/package.json
+++ b/package.json
@@ -4,21 +4,29 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "dev":   "tsx watch src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "lint":  "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
-    "test":  "jest --passWithNoTests",
-    "clean": "rimraf dist coverage"
+    "lint": "eslint \"src/**/*.{ts,tsx,js}\" --max-warnings=0",
+    "test": "jest --passWithNoTests",
+    "clean": "rimraf dist coverage",
+    "api": "uvicorn src.api.app:app --reload",
+    "start:api": "npm run api"
   },
   "devDependencies": {
-    "tsx": "^4.7.0",
-    "eslint": "^9.4.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.3.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.3.2",
+    "@eslint/js": "^9.24.0",
     "@types/jest": "^29.5.11",
-    "rimraf": "^5.0.5"
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.1",
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.3.2",
+    "tsx": "^4.7.0",
+    "typescript-eslint": "^8.30.1"
   }
 }
